feat(ticket): extend ticket domain and repository with section routing and KYC status